tests/NormalTests/paczka1/fuzzy1/48920317.err
Error in line 7: iBitZ A426 27,8
Error in line 17: wZ4yVscJy A426 1,5
Error in line 18: 86f1MdbK1 S759 3,7
Error in line 26: 86f1MdbK1 A330 50,9
Error in line 27: 86f1MdbK1 A426 68,3
